# com.solar2d-plugin.eos

./: .gitignore  LICENSE.md  README.md
plugins/2020.3627/android/: corona.gradle
plugins/2020.3627/iphone-sim/: metadata.lua
plugins/2020.3627/iphone-sim/resources/Frameworks/EOSSDK.framework/_CodeSignature/: CodeResources
plugins/2020.3627/mac-sim/: plugin_eos.dylib
src/: README.md
src/Corona/: build.settings  config.lua  main.lua
src/Source/: BaseEosCallResultHandler.cpp  BaseEosCallResultHandler.h  DispatchEventTask.cpp  DispatchEventTask.h  EosCallResultHandler.h  EosLuaInterface.cpp  PlatformCommandLine-mac.mm  PlatformCommandLine-win.cpp  PlatformCommandLine.cpp  PlatformCommandLine.h  PluginConfigLuaSettings.cpp  PluginConfigLuaSettings.h  RuntimeContext.cpp  RuntimeContext.h  plugin.eos.sln  plugin.eos.vcxproj  plugin.eos.vcxproj.filters
src/android/: gradle.properties
src/android/app/: build.gradle.kts
src/android/plugin/: build.gradle
src/android/plugin/src/main/: AndroidManifest.xml
src/android/plugin/src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/android/plugin/src/main/java/plugin/eos/: LuaLoader.java
src/ios/: CoronaNative.xcconfig  build.sh  deployLocal.sh  metadata.lua
src/ios/App.xcodeproj/: project.pbxproj
src/ios/Plugin/: WebAuthContextProvider.h  WebAuthContextProvider.mm
src/ios/Plugin.xcodeproj/: project.pbxproj
src/mac/: build.sh
src/mac/Plugin.xcodeproj/: project.pbxproj
src/mac/Plugin.xcodeproj/xcshareddata/xcschemes/: plugin_eos.xcscheme
